# Compilers-project

./: .gitignore  CMakeLists.txt  README.md  token.txt
bk/: bkMakefile  helpler.cpp  parser.tab.hpp  scanner.l  splc.h  test.c
lab1/: linked_list.c  linked_list.h
lab3/: syntax_ref.y
reference1/: lex.foo.c  spl_test.c
reference2/: README.md
simple_wc_example/: CMakeLists.txt  Makefile
spl_lexer/: Makefile  helpler.c  helpler.h  lex.l  parser.tab.cpp  parser.y  scanner.yy.cpp  spl_test.c  splc.cpp
spl_project1/: Makefile  README.md  ast.cpp  ast.hpp  location.hh  main.cpp  parser.bk  parser.tab.cpp  parser.tab.hpp  parser.y  position.hh  scanner.bk  scanner.hpp  scanner.l  scanner.yy.cpp  spl_driver.cpp  spl_driver.hpp  spl_test.c  splc  stack.hh  test.c  test.cpp  utils.cpp  utils.hpp
spl_project2/: Makefile  README.md  ast.cpp  ast.hpp  error.cpp  error.hpp  information.cpp  information.hpp  main.cpp  parser.tab.cpp  parser.tab.hpp  parser.y  scanner.l  scanner.yy.cpp  semantics.cpp  semantics.hpp  spl_driver.cpp  spl_driver.hpp  spl_test.c  symbol  symbol.cpp  symbol.hpp  test.cpp  test.hpp  test_project1.cpp  test_symbol.cpp  test_visitor.cpp  type.cpp  type.hpp  type_case.hpp  utils.hpp  visitor  visitor.cpp  visitor.hpp
spl_project3/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_bk  README.md  ast.cpp  ast.hpp  check.cpp  cmake_install.cmake  error.cpp  error.hpp  information.cpp  information.hpp  ir.cpp  ir.hpp  location.hh  main.cpp  optimizer.cpp  optimizer.hpp  parser.tab.cpp  parser.tab.hpp  position.hh  scanner.hpp  scanner.yy.cpp  semantics.cpp  semantics.hpp  spl_driver.cpp  spl_driver.hpp  stack.hh  symbol.cpp  symbol.hpp  tac.cpp  tac.hpp  test.cpp  test_visitor.cpp  type.cpp  type.hpp  type_switch.hpp  utils.cpp  utils.hpp  (+2 more)
spl_project3/report/: 11610127-project3.md
spl_project3/sample/: mytest.out  mytest.spl
spl_project3/test/: test_3_b01.out  test_3_b01.spl  test_3_b02.out  test_3_b03.out  test_3_b04.out  test_3_b04.spl  test_3_b05.out  test_3_r01.out  test_3_r02.out  test_3_r02.spl  test_3_r03.out  test_3_r03.spl  test_3_r04.out  test_3_r04.spl  test_3_r05.out  test_3_r05.spl  test_3_r06.out  test_3_r07.out  test_3_r07.spl  test_3_r08.out  test_3_r09.out  test_3_r09.spl  test_3_r10.out  test_3_r10.spl
spl_project3/test2/: test_2_o01.spl
spl_project3/test2/ans/: test_2_r05.out  test_2_r12.out
spl_project3/test2/answer/: test_2_o02.out  test_2_r04.out  test_2_r08.out
spl_project4/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.hpp  check.cpp  cmake_install.cmake  information.cpp  lru.hpp  main.cpp  mips.cpp  mips.hpp  optimizer.cpp  optimizer.hpp  parser.y  scanner.hpp  semantics.cpp  semantics.hpp  spl_driver.cpp  spl_driver.hpp  symbol.cpp  (+7 more)
(+67 files in other folders)
